# bfa-ocaml

./: Cargo.toml  README.md  array_add.c  bfa-c.opam  bfa-c.opam.template  bfa-rust.opam  clean_log.py  dune-project  dune-workspace
.github/workflows/: ci.yml
bfa_c/test/cram/simple_bi.t/: load.c  run.t
demo/: aliasing.rs  transmute.rs
soteria-c/lib/: csymex.ml  driver.ml  dune  interp.ml  l.ml  label_cache.ml  symbol_std.ml  z3solver.ml
soteria-rust/bin-rs/: main.rs
soteria-rust/lib/: crate.ml  encoder.ml  error.ml  heap.ml  interp.ml  layout.ml  plugin.ml  rustsymex.ml  z3solver.ml
soteria-rust/lib/builtins/: std.ml
soteria/lib/symex/: dune  incremental.ml  logging.ml  solver.ml  symex.ml  var.mli
soteria/lib/symex-html-logs/: dune  soteria_html_logs.ml  soteria_html_logs.mli
